# intphys

./: .gitignore  .gitmodules  AUTHORS.rst  README.md  intphys.py  intphys.uproject
Config/: DefaultEngine.ini  DefaultGame.ini
Content/: AxisCylinder.uasset  Camera.uasset  Camera_Blueprint.uasset  DirectionalLight.uasset  Floor.uasset  IntphysGameState.uasset  IntphysMap.umap  IntphysMap_BuiltData.uasset  IntphysMode.uasset  Object.uasset  Occluder.uasset  OccluderDynamicState.uasset  PointLight.uasset  SkyLight.uasset  SkySphere.uasset  Wall.uasset
Content/Meshes/: Bump_StaticMesh.uasset  Capsule.uasset  Cone.uasset  Cube.uasset  Cube_Lollipop.uasset  Cylinder.uasset  (+13 more)
Exemples/: train.json
Meshes/: O0 pane.blend  PaneHandles.mtl
Source/: intphys.Target.cs  intphysEditor.Target.cs
Tools/: README.md  build_game.sh  build_package.sh  build_shaders.sh  clean.sh  dataset_pipeline.sh  html.sh  images2video.sh  make_archives.py  merge_directories.py  shuffle_test.py  split_json.py  utilities.sh
Tools/postprocessing/: CMakeLists.txt  README.md  run_safe.sh
Tools/postprocessing/include/: dataset.hh  foreach.hpp  image.hh  intphys_dataset.hh  intphys_image.hh  intphys_randomizer.hpp  intphys_scene.hh  intphys_status.hh  progressbar.hh  randomizer.hpp  scene.hh  scene_dev.hh  scene_factory.hh  scene_test.hh  scene_train.hh
Tools/postprocessing/src/: dataset.cc  image.cc  intphys_dataset.cc  intphys_image.cc  intphys_scene.cc  intphys_status.cc  main.cc  main.cpp  progressbar.cc  scene.cc  scene_dev.cc  scene_factory.cc  scene_test.cc  scene_train.cc  status.cc
(+238 files in other folders)
